update nifi server-compose

--- a/server/nifi.yml
+++ b/server/nifi.yml
@@ -1,7 +1,8 @@
 version: '3.8'
 services:
   nifi:
-    image: apache/nifi:latest
+    # this version is currently the latest,
+    image: apache/nifi:1.27.0
     container_name: nifi
     ports:
       - "8080:8080"  # NiFi Web UI
