--- a/compose/mongodb.yml
+++ b/compose/mongodb.yml
@@ -5,7 +5,7 @@ services:
     image: mongo:8.0.0
     container_name: mongodb
     volumes:
-      - mongo-data:/data/db
+      - mongo_data:/data/db
     ports:
       - "27017:27017"
     networks:
