--- a/compose/keycloak.yml
+++ b/compose/keycloak.yml
@@ -10,8 +10,8 @@ services:
       KEYCLOAK_HTTP_PORT: 8080
       KEYCLOAK_HTTPS_PORT: 8443
 
-      KEYCLOAK_ENABLE_STATISTICS: true
-      KEYCLOAK_ENABLE_HEALTH_ENDPOINTS: true
+#      KEYCLOAK_ENABLE_STATISTICS: true
+#      KEYCLOAK_ENABLE_HEALTH_ENDPOINTS: true
 
       KEYCLOAK_DATABASE_HOST: "db"
       KEYCLOAK_DATABASE_PORT: 5432
