--- a/compose/confluent.yml
+++ b/compose/confluent.yml
@@ -23,7 +23,7 @@ services:
       KAFKA_BROKER_ID_GENERATION_ENABLE: "true"
 
       KAFKA_LISTENERS: "PLAINTEXT://0.0.0.0:9092"
-      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://$(hostname -I | awk '{print $1}'):9092"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://10.20.3.17:9092"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "PLAINTEXT:PLAINTEXT"
 
       KAFKA_DEFAULT_REPLICATION_FACTOR: 3
