--- a/compose/sonarqube.yml
+++ b/compose/sonarqube.yml
@@ -28,6 +28,8 @@ services:
       POSTGRES_DB: sonar
       POSTGRES_USER: sonar
       POSTGRES_PASSWORD: sonar
+    ports:
+      - "5432:5432"
     volumes:
       - sonarqube_postgresql:/var/lib/postgresql
       - sonarqube_postgresql_data:/var/lib/postgresql/data
