--- a/compose/confluent.yml
+++ b/compose/confluent.yml
@@ -54,7 +54,7 @@ services:
       - kafka
     environment:
       SCHEMA_REGISTRY_HOST_NAME: "schema-registry"
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: "PLAINTEXT://kafka:9092"
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: "kafka:9092"
       SCHEMA_REGISTRY_KAFKASTORE_TOPIC: "_schemas"
       SCHEMA_REGISTRY_KAFKASTORE_TOPIC_REPLICATION_FACTOR: 3
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
