--- a/compose/elk.yml
+++ b/compose/elk.yml
@@ -2,44 +2,17 @@ version: '3.8'
 
 services:
   elasticsearch:
-    image: elasticsearch:8.15.1
+    image: localhost/elasticsearch:8.5.1
     container_name: elasticsearch
     environment:
       discovery.type: "single-node"
       xpack.security.enabled: "false"
       ES_JAVA_OPTS: "-Xms512m -Xmx512m"
     ports:
-      - "9200:9200"
+      - "19076:9200"
     volumes:
       - es_data:/usr/share/elasticsearch/data
       - es_logs:/usr/share/elasticsearch/logs
-    networks:
-      - elk
-
-  kibana:
-    image: kibana:8.15.1
-    container_name: kibana
-    depends_on:
-      - elasticsearch
-    environment:
-      ELASTICSEARCH_URL: "http://elasticsearch:9200"
-    ports:
-      - "5601:5601"
-    networks:
-      - elk
-
-  logstash:
-    image: logstash:8.15.1
-    container_name: logstash
-    depends_on:
-      - elasticsearch
-    environment:
-      xpack.monitoring.elasticsearch.hosts: "http://elasticsearch:9200"
-      LS_JAVA_OPTS: "-Xms256m -Xmx256m"
-    volumes:
-      - es_logstash_pipeline:/usr/share/logstash/pipeline
-    ports:
-      - "5044:5044"
     networks:
       - elk
 
@@ -49,9 +22,6 @@ volumes:
     driver: local
   es_logs:
     name: es_logs
-    driver: local
-  es_logstash_pipeline:
-    name: es_logstash_pipeline
     driver: local
 
 networks:
