--- a/compose/elk.yml
+++ b/compose/elk.yml
@@ -4,6 +4,7 @@ services:
   elasticsearch:
     image: elasticsearch:8.15.1
     container_name: elasticsearch
+    restart: always
     environment:
       discovery.type: "single-node"
       xpack.security.enabled: "false"
@@ -19,8 +20,7 @@ services:
   kibana:
     image: kibana:8.15.1
     container_name: kibana
-    depends_on:
-      - elasticsearch
+    restart: always
     environment:
       ELASTICSEARCH_URL: "http://elasticsearch:9200"
     ports:
@@ -31,8 +31,7 @@ services:
   logstash:
     image: logstash:8.15.1
     container_name: logstash
-    depends_on:
-      - elasticsearch
+    restart: always
     environment:
       xpack.monitoring.elasticsearch.hosts: "http://elasticsearch:9200"
       LS_JAVA_OPTS: "-Xms256m -Xmx256m"
