--- a/compose/keycloak.yml
+++ b/compose/keycloak.yml
@@ -5,7 +5,7 @@ services:
   keycloak:
     image: bitnami/keycloak:25.0.6
     container_name: keycloak
-    restart: unless-stopped
+    restart: always
     environment:
       KEYCLOAK_HTTP_PORT: 8080
       KEYCLOAK_HTTPS_PORT: 8443
@@ -31,7 +31,7 @@ services:
   db:
     image: postgres:16.4
     container_name: keycloak_db
-    restart: unless-stopped
+    restart: always
     volumes:
       - keycloak_postgres_data:/var/lib/postgresql/data
     environment:
