--- a/compose/mongodb.yml
+++ b/compose/mongodb.yml
@@ -4,6 +4,7 @@ services:
   mongodb:
     image: mongo:8.0.0
     container_name: mongodb
+    restart: always
     volumes:
       - mongo_data:/data/db
     ports:
