--- a/compose/postgres.yml
+++ b/compose/postgres.yml
@@ -4,6 +4,7 @@ services:
   postgres:
     image: postgres:16.4
     container_name: postgres
+    restart: always
     environment:
       POSTGRES_PASSWORD: password
     ports:
