--- a/compose/sonarqube.yml
+++ b/compose/sonarqube.yml
@@ -4,8 +4,7 @@ services:
   sonarqube:
     image: sonarqube:9.9.1-community
     container_name: sonarqube
-    depends_on:
-      - db
+    restart: always
     environment:
       SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
       SONAR_JDBC_USERNAME: sonar
@@ -23,7 +22,7 @@ services:
   db:
     image: postgres:16.4
     container_name: sonarqube_db
-    restart: unless-stopped
+    restart: always
     environment:
       POSTGRES_DB: sonar
       POSTGRES_USER: sonar
