--- a/compose/nifi.yml
+++ b/compose/nifi.yml
@@ -4,7 +4,7 @@ services:
   nifi:
     image: apache/nifi:1.27.0
     container_name: nifi
-    restart: always
+    restart: unless-stopped
     ports:
       - "8080:8080"  # NiFi Web UI
     environment:
