--- a/compose/nexus.yml
+++ b/compose/nexus.yml
@@ -4,7 +4,7 @@ services:
   nexus:
     container_name: nexus_repository
     image: sonatype/nexus3
-    restart: unless-stopped
+    restart: always
     volumes:
       - "nexus-data:/sonatype-work"
     ports:
