--- a/compose/cassandra.yml
+++ b/compose/cassandra.yml
@@ -4,7 +4,7 @@ services:
   cassandra:
     image: cassandra:5.0.0
     container_name: cassandra
-    restart: unless-stopped
+    restart: always
     volumes:
       - cassandra_data:/var/lib/cassandra
     ports:
