--- a/compose/postgres.yml
+++ b/compose/postgres.yml
@@ -4,7 +4,7 @@ services:
   postgres:
     image: postgres:16.4
     container_name: postgres
-    restart: unless-stopped
+    restart: always
     environment:
       POSTGRES_PASSWORD: password
     ports:
