--- a/compose/monitoring.yml
+++ b/compose/monitoring.yml
@@ -18,8 +18,15 @@ services:
       - "3000:3000"
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - grafana_data:/var/lib/grafana
     networks:
       - monitoring
+
+volumes:
+  grafana_data:
+    name: grafana_data
+    driver: local
 
 networks:
   monitoring:
