--- a/compose/redis.yml
+++ b/compose/redis.yml
@@ -4,12 +4,27 @@ services:
   redis:
     image: redis:7.4.1
     container_name: redis
+    restart: always
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    environment:
+      - REDIS_MAXMEMORY=4gb
+      - REDIS_MAXMEMORY_POLICY=allkeys-lru
+    command: [
+      "redis-server",
+      "--maxmemory", "4gb",
+      "--maxmemory-policy", "allkeys-lru",
+      "--save", ""
+    ]
     networks:
       - redis
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 4G
 
 volumes:
   redis_data:
